--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,11 @@
             <artifactId>ojdbc8</artifactId>
             <version>19.3</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
 
     </dependencies>
